fixed mobile horizontal scroll

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,6 +13,7 @@
   justify-content: center;
   align-self: center;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 .middle {
