--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,6 @@
 
 html,
 body {
-  padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   -ms-overflow-style: none; /* IE and Edge */
